Add: header element in index.html

--- a/SpaceStation/index.html
+++ b/SpaceStation/index.html
@@ -17,7 +17,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+<!---------------------------- Start Header ------------------------------>
+<header class="page_header">
+<div></div>
+</header>
+<!---------------------------- End Header ------------------------------>
 
 
 
