--- a/index.html
+++ b/index.html
@@ -18,8 +18,38 @@
 </head>
 <body>
 <!---------------------------- Start Header ------------------------------>
-<header class="page_header">
-<div></div>
+<header class="page-header">
+<div class="navbar">
+<!-- Start copied code: Bootstrap Navbar components code -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Amazing ISS</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Location R-T</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Photos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Spaces bases</a>
+      </li>
+      
+    </ul>
+    
+  </div>
+</nav>
+<!-- End copied code: Bootstrap Navbar components code -->
+</div>
 </header>
 <!---------------------------- End Header ------------------------------>
 
