--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 <body>
 <!---------------------------- Start Header ------------------------------>
 <header class="page-header">
-<div class="navbar">
+<div class="menu">
 <!-- Start copied code: Bootstrap Navbar components code -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#">Amazing ISS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
+  <!--ERROR: Navbar does not want to move right -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
@@ -43,9 +44,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Spaces bases</a>
       </li>
-      
     </ul>
-    
   </div>
 </nav>
 <!-- End copied code: Bootstrap Navbar components code -->
