Feat: page top left added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- custom css file -->
     <link rel="stylesheet" href="SpaceStation/css/style.css">
 </head>
@@ -51,7 +50,33 @@
 </header>
 <!---------------------------- End Header ------------------------------>
 
+<!---------------------------- Start Main ------------------------------>
 
+<main class="page-main">
+    
+
+    <!---------------------------- Start Main-Top ------------------------------>
+    <section class="page-top">
+        <div class="container">
+            <div class="row">
+            <!---COL-LG-6 MIGHT BE CHANGED TO COL-LG-12!!!!-->
+                <div class="col-lg-6 col-md-12 page-title">
+                    <h4 class="title-text">Hello!</h4>
+                    <h1 class="title-text">ISS is great</h1>
+                    <h4 class="title-text">Hi!</h4>
+                    <div class="space-icon">
+                    <!----ERROR: icon below does not want to move because it it considered text to the browser, find out how to push-->
+                        <i class="fas fa-space-shuttle mr-4"></i>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12"></div>
+            </div>
+        </div>
+    </section>
+    <!---------------------------- End Main-Top ------------------------------>
+
+</main>
+<!---------------------------- End Main ------------------------------>
 
 
     <!-- JS links -->
