Feat: page top right logo added

--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
                     <h4 class="title-text">Hello!</h4>
                     <h1 class="title-text">ISS is great</h1>
                     <h4 class="title-text">Hi!</h4>
-                    <div class="space-icon">
+                    <div class="space-icon d-flex flex-row flex-wrap">
                     <!----ERROR: icon below does not want to move because it it considered text to the browser, find out how to push-->
-                        <i class="fas fa-space-shuttle mr-4"></i>
+                        <i class="fas fa-space-shuttle ml-4"></i>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12"></div>
+                <div class="col-lg-6 col-md-12 page-img">
+                    <img src="SpaceStation/img/ISS-logo1.jpg" alt="ISS logo" class="img-fluid">
+                </div>
             </div>
         </div>
     </section>
