--- a/index.html
+++ b/index.html
@@ -1,95 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISS | International Space Station location</title>
-    <!-- Bootsrap css-->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <!-- custom css file -->
-    <link rel="stylesheet" href="SpaceStation/css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>ISS | International Space Station location</title>
+	<!-- Bootsrap css-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+	<!-- custom css file -->
+	<link rel="stylesheet" href="SpaceStation/css/style.css">
 </head>
+
 <body>
-<!---------------------------- Start Header ------------------------------>
-<header class="page-header">
-<div class="menu">
-<!-- Start copied code: Bootstrap Navbar components code -->
-<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#">Amazing ISS</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<!---------------------------- Start Header ------------------------------>
+	<header class="page-header">
+		<div class="menu">
+			<!-- Start copied code: Bootstrap Navbar components code -->
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<a class="navbar-brand" href="#">Amazing ISS</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Location R-T</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Photos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Spaces bases</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<!-- End copied code: Bootstrap Navbar components code -->
-</div>
-</header>
-<!---------------------------- End Header ------------------------------>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Location R-T</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Photos</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Spaces bases</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<!-- End copied code: Bootstrap Navbar components code -->
+		</div>
+	</header>
+	<!---------------------------- End Header ------------------------------>
 
-<!---------------------------- Start Main ------------------------------>
+	<!---------------------------- Start Main ------------------------------>
 
-<main class="page-main">
-    
+	<main class="page-main">
 
-    <!---------------------------- Start Main-Top ------------------------------>
-    <section class="page-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 page-title">
-                    <h4 class="title-text">Hello!</h4>
-                    <h1 class="title-text">ISS is great</h1>
-                    <h4 class="title-text">Hi!</h4>
-                    <div class="space-icon d-flex flex-row flex-wrap">
-                    <!----ERROR: icon below does not want to move because it it considered text to the browser, find out how to push-->
-                        <i class="fas fa-space-shuttle ml-4"></i>
+
+		<!---------------------------- Start Main-Top ------------------------------>
+		<section class="page-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 col-md-12 page-title">
+						<h4 class="title-text text-uppercase">Tracking the</h4>
+						<h1 class="title-text text-uppercase">ISS_____</h1>
+						<h3 class="title-text text-uppercase">in Real Time</h3>
+						<div class="space-icon">
+							<div class="d-flex flex-row flex-wrap">
+								<!----ERROR: icon below does not want to move because it it considered text to the browser, find out how to push-->
+								<i class="fas fa-space-shuttle ml-4"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-12 page-img">
+						<img src="SpaceStation/img/ISS-logo1.jpg" alt="ISS logo" class="img-fluid">
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-12 page-img">
-                    <img src="SpaceStation/img/ISS-logo1.jpg" alt="ISS logo" class="img-fluid">
-                </div>
-            </div>
-        </div>
-    </section>
-    <!---------------------------- End Main-Top ------------------------------>
+				</div>
+			</div>
+		</section>
+		<!---------------------------- End Main-Top ------------------------------>
 
-</main>
-<!---------------------------- End Main ------------------------------>
+	</main>
+	<!---------------------------- End Main ------------------------------>
 
 
-    <!-- JS links -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+	<!-- JS links -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 	</script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
-    <!-- /JS links -->
+	<!-- /JS links -->
 </body>
+
 </html>
