Feat: About section basic html complete

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<main class="page-main">
 
 
-		<!---------------------------- Start Main-Top ------------------------------>
+		<!---------------------------- Start Top section------------------------------>
 		<section class="page-top">
 			<div class="container">
 				<div class="row">
@@ -72,10 +72,34 @@
 					<div class="col-lg-6 col-md-12 page-img">
 						<img src="SpaceStation/img/ISS-logo1.jpg" alt="ISS logo" class="img-fluid">
                     </div>
+					</div>
+				</div>
+		</section>
+		<!---------------------------- End Top section ------------------------------>
+
+		<!---------------------------- Start About section ------------------------------>
+		<section class="about-section">
+			<div class="contanier-fluid">
+				<div class="row">
+					<div class="col-lg-6 col-md-12">
+                        <div class="about-img">
+                           <img src="SpaceStation/img/space-station-drawing.png" alt="Drawing of the ISS" class="img-fluid">
+                        </div>
+                    </div>
+					<div class="col-lg-6 col-md-12 about-text">
+                        <h2 class="text-uppercase pt-5">What is the ISS?</h2>
+                        <div class="about-information py-4 w-75">
+                           <p> Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng]velit, sed quia non-numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                           <p> Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis suscipitlaboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui inea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non-provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non-recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat…</p>
+                        </div>
+                    </div>
 				</div>
 			</div>
 		</section>
-		<!---------------------------- End Main-Top ------------------------------>
+
+
+		<!---------------------------- End About section ------------------------------>
+
 
 	</main>
 	<!---------------------------- End Main ------------------------------>
