--- a/index.html
+++ b/index.html
@@ -82,24 +82,45 @@
 			<div class="contanier-fluid">
 				<div class="row">
 					<div class="col-lg-6 col-md-12">
-                        <div class="about-img">
-                           <img src="SpaceStation/img/space-station-drawing.png" alt="Drawing of the ISS" class="img-fluid">
+						<div class="about-img">
+							<img src="SpaceStation/img/space-station-drawing.png" alt="Drawing of the ISS" class="img-fluid">
                         </div>
-                    </div>
-					<div class="col-lg-6 col-md-12 about-text">
-                        <h2 class="text-uppercase pt-5"><span>What</span><span>is the</span><span>ISS?</span></h2>
-                        <div class="about-information py-4 w-75">
-                           <p> Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng]velit, sed quia non-numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                           <p> Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis suscipitlaboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui inea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non-provident,</p>
-                        </div>
-                    </div>
+						</div>
+						<div class="col-lg-6 col-md-12 about-text">
+							<h2 class="text-uppercase pt-5"><span>What</span><span>is the</span><span>ISS?</span></h2>
+							<div class="about-information py-4 w-75">
+								<p> Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium
+									doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore
+									veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam
+									voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur
+									magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est,
+									qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng]velit, sed quia
+									non-numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam
+									quaerat voluptatem.</p>
+								<p> Ut enim ad minima veniam, quis nostrum[d] exercitationem ullam corporis
+									suscipitlaboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum
+									iure reprehenderit, qui inea voluptate velit esse, quam nihil molestiae consequatur,
+									vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? [33] At vero eos et
+									accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum
+									deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati
+									cupiditate non-provident,</p>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
 		</section>
 		<!---------------------------- End About section ------------------------------>
 
-        <!---------------------------- Start ISS API section ------------------------------>
-        <!---------------------------- End ISS API section ------------------------------>
+		<!---------------------------- Start ISS API section ------------------------------>
+		<section class="RT-updates">
+			<div class="container">
+				<div class="row">
+                <div class="col-lg-6 offset-lg-4 col-md-12"></div>
+                </div>
+			</div>
+		</section>
+
+		<!---------------------------- End ISS API section ------------------------------>
 
 
 	</main>
