Feat Gallery section created and initial html started

--- a/index.html
+++ b/index.html
@@ -112,15 +112,61 @@
 		<!---------------------------- End About section ------------------------------>
 
 		<!---------------------------- Start ISS API section ------------------------------>
-		<section class="RT-updates">
+		<section class="RT-section">
 			<div class="container">
 				<div class="row">
-                <div class="col-lg-6 offset-lg-4 col-md-12"></div>
-                </div>
+					<div class="col-lg-6 offset-lg-4 col-md-12"></div>
+				</div>
 			</div>
 		</section>
 
 		<!---------------------------- End ISS API section ------------------------------>
+
+		<!---------------------------- Start Gallery section ------------------------------>
+
+		<section class="gallery-section">
+			<div class="container">
+				<div class="gallery-title pb-5">
+					<h1 class="text-uppercase">ISS gallery</h1>
+				</div>
+				<div class="row grid">
+					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery1.jpg" alt="ISS image number one">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">first img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery2.jpg" alt="ISS image number two">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">Second img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery3.jpg" alt="ISS image number three">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">third img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+
+		<!---------------------------- End Gallery section ------------------------------>
 
 
 	</main>
