Add all images to Gallery section and primary html done

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 				<div class="gallery-title pb-5">
 					<h1 class="text-uppercase">ISS gallery</h1>
 				</div>
-				<div class="row grid">
+				<div class="row grid"> <!--ERROR: get images closer together if i have time-->
 					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery1.jpg" alt="ISS image number one">
+                            <img src="SpaceStation/img/gallery/ms2-gallery2.jpg" alt="ISS image number one">
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">first img</h4>
@@ -142,7 +142,7 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery2.jpg" alt="ISS image number two">
+                            <img src="SpaceStation/img/gallery/ms2-gallery3.jpg" alt="ISS image number two">
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">Second img</h4>
@@ -152,10 +152,70 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery3.jpg" alt="ISS image number three">
+                            <img src="SpaceStation/img/gallery/ms2-gallery7.jpg" alt="ISS image number three">
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">third img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery5.jpg" alt="ISS image number four">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">forth img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery4.jpg" alt="ISS image number five">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">fifth img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery6.jpg" alt="ISS image number six">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">sixth img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery8.jpg" alt="ISS image number seven">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">seventh img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery9.jpg" alt="ISS image number eigth">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">eigth img</h4>
+                            <span class="text-secondary">further info</span>
+                        </div>
+
+					</div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
+						<div class="pictures">
+                            <img src="SpaceStation/img/gallery/ms2-gallery1.jpg" alt="ISS image number nine">
+						</div>
+                        <div class="img-description py-4">
+                            <h4 class="text-uppercase">ninth img</h4>
                             <span class="text-secondary">further info</span>
                         </div>
 
@@ -184,6 +244,8 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
 	<!-- /JS links -->
+    <!--custom js file -->
+    <script src="SpaceStation/js/main.js"></script>
 </body>
 
 </html>
