Fix Magnific-popup gallery function complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 	<!-- Magnific Popup css file -->
-    <link rel="stylesheet" href="magnific-popup/magnific-popup.css">
+    <link rel="stylesheet" href="SpaceStation/Magnific-Popup/dist/magnific-popup.css">
     
     <!-- custom css file -->
 	<link rel="stylesheet" href="SpaceStation/css/style.css">
@@ -136,8 +136,8 @@
 				<div class="row grid"> <!--ERROR: get images closer together if i have time-->
 					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <a class="test-popup-link" href="/SpaceStation/img/gallery/ms2-gallery2.jpg">
-                                <img src="/SpaceStation/img/gallery/ms2-gallery2.jpg" alt="ISS image number one">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery2.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery2.jpg" alt="ISS image number one">
                             </a>
                         </div>
                         <div class="img-description py-4">
@@ -148,7 +148,7 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <a class="test-popup-link" href="/SpaceStation/img/gallery/ms2-gallery2.jpg">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery3.jpg">
                                 <img src="SpaceStation/img/gallery/ms2-gallery3.jpg" alt="ISS image number two">
                             </a>
                         </div>
@@ -160,7 +160,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery7.jpg" alt="ISS image number three">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery7.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery7.jpg" alt="ISS image number three">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">third img</h4>
@@ -170,7 +172,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery5.jpg" alt="ISS image number four">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery5.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery5.jpg" alt="ISS image number four">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">forth img</h4>
@@ -180,7 +184,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery4.jpg">
                             <img src="SpaceStation/img/gallery/ms2-gallery4.jpg" alt="ISS image number five">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">fifth img</h4>
@@ -190,7 +196,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery6.jpg" alt="ISS image number six">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery6.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery6.jpg" alt="ISS image number six">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">sixth img</h4>
@@ -200,7 +208,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery8.jpg" alt="ISS image number seven">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery8.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery8.jpg" alt="ISS image number seven">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">seventh img</h4>
@@ -210,7 +220,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery9.jpg" alt="ISS image number eigth">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery9.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery9.jpg" alt="ISS image number eigth">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">eigth img</h4>
@@ -220,7 +232,9 @@
 					</div>
                     <div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
 						<div class="pictures">
-                            <img src="SpaceStation/img/gallery/ms2-gallery1.jpg" alt="ISS image number nine">
+                            <a class="test-popup-link" href="SpaceStation/img/gallery/ms2-gallery3.jpg">
+                                <img src="SpaceStation/img/gallery/ms2-gallery1.jpg" alt="ISS image number nine">
+                            </a>
 						</div>
                         <div class="img-description py-4">
                             <h4 class="text-uppercase">ninth img</h4>
@@ -253,7 +267,7 @@
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
 	<!-- Magnific popup -->
-    <script src="magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="SpaceStation/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
     
 
     <!--custom js file -->
