--- a/index.html
+++ b/index.html
@@ -250,6 +250,23 @@
 
 		<!---------------------------- End Gallery section ------------------------------>
 
+        <!---------------------------- Start Quotes section ------------------------------>
+        <section class="quotes-section">
+            <div class="container">
+                <div class="row text-center"><!---CONTAINS BOOTSTRAP CLASS-->
+                    <div class="col-12">
+                        <div class="quote-title">
+                            <h1 class="text-uppercase">Astronauts about the ISS</h1>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad autem esse facilis voluptatibus consequuntur magni, ipsa temporibus eos sapiente illo?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!---------------------------- End Quotes section ------------------------------>
+
 
 	</main>
 	<!---------------------------- End Main ------------------------------>
