Add owl-carousel feature to Quotes section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 	<!-- Magnific Popup css file -->
     <link rel="stylesheet" href="SpaceStation/Magnific-Popup/dist/magnific-popup.css">
+    <!-- Owl-carousel css-->
+    <link rel="stylesheet" href="SpaceStation/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="SpaceStation/owl-carousel/css/owl.theme.default.min.css">
     
     <!-- custom css file -->
 	<link rel="stylesheet" href="SpaceStation/css/style.css">
@@ -262,6 +265,48 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container carousel py-lg-5">
+                <div class="owl-carousel owl-theme">
+                    <div class="astronaut row">
+                        <div class="col-lg-4 col-md-12 astronaut-img">
+                            <img src="SpaceStation/img/quotes/peggy.jpg" alt="Peggy Whitson" class="img-fluid">
+                        </div>
+                        <div class="col-lg-8 col-md-12 astronaut-quote">
+                            <h4 class="text-uppercase">Peggy Whitson</h4>
+                            <p>"I think the legacy of the space station will be that we can do something this technically complex in an international way."</p>
+                        </div>
+                    </div>
+                    <div class="astronaut row">
+                        <div class="col-lg-4 col-md-12 astronaut-img">
+                            <img src="SpaceStation/img/quotes/chris.jpg" alt="Chris Hadfield" class="img-fluid">
+                        </div>
+                        <div class="col-lg-8 col-md-12 astronaut-quote">
+                            <h4 class="text-uppercase">Chris Hadfield</h4>
+                            <p>"While on the space station, I kept up with news a couple of ways - Mission Control sent daily summaries, and I would scan headlines on Google News when we had an Internet connection, which was about half the time."</p>
+                        </div>
+                    </div>
+                    <div class="astronaut row">
+                        <div class="col-lg-4 col-md-12 astronaut-img">
+                            <img src="SpaceStation/img/quotes/ellen.jpg" alt="Ellen Ochoa" class="img-fluid">
+                        </div>
+                        <div class="col-lg-8 col-md-12 astronaut-quote">
+                            <h4 class="text-uppercase">Ellen Ochoa</h4>
+                            <p>"We continue to not only operate the International Space Station but to increase its capabilities as well as commercial contributions."</p>
+                        </div>
+                    </div>
+                    <div class="astronaut row">
+                        <div class="col-lg-4 col-md-12 astronaut-img">
+                            <img src="SpaceStation/img/quotes/scott.jpg" alt="Scott Kelly" class="img-fluid">
+                        </div>
+                        <div class="col-lg-8 col-md-12 astronaut-quote">
+                            <h4 class="text-uppercase">Scott Kelly</h4>
+                            <p>"The space station here is a magical place and an incredible science facility."</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
 
@@ -286,6 +331,8 @@
 	<!-- Magnific popup -->
     <script src="SpaceStation/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
     
+    <!-- Owl-carousel js -->
+    <script src="SpaceStation/owl-carousel/js/owl.carousel.min.js"></script>
 
     <!--custom js file -->
     <script src="SpaceStation/js/main.js"></script>
