Style Quotes section initial styling complete

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
             <div class="container">
                 <div class="row text-center"><!---CONTAINS BOOTSTRAP CLASS-->
                     <div class="col-12">
-                        <div class="quote-title">
-                            <h1 class="text-uppercase">Astronauts about the ISS</h1>
+                        <div class="quotes-title">
+                            <h1 class="text-uppercase">Astronauts about the <span>ISS</span></h1>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad autem esse facilis voluptatibus consequuntur magni, ipsa temporibus eos sapiente illo?</p>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                         </div>
                         <div class="col-lg-8 col-md-12 astronaut-quote">
                             <h4 class="text-uppercase">Chris Hadfield</h4>
-                            <p>"While on the space station, I kept up with news a couple of ways - Mission Control sent daily summaries, and I would scan headlines on Google News when we had an Internet connection, which was about half the time."</p>
+                            <p>"When I did my spacewalks, it was during space station construction. So the shuttle was docked to the fledgling ISS at the time. So we would always stay tethered."</p>
                         </div>
                     </div>
                     <div class="astronaut row">
