--- a/index.html
+++ b/index.html
@@ -316,6 +316,23 @@
 	</main>
 	<!---------------------------- End Main ------------------------------>
 
+    <footer class="footer-section">
+        <div class="container">
+            <div class="">
+                <div class="iss-logo text-center py-4">
+                    <a href="#" ><img src="#" alt="ISS logo"></a>
+                </div>    
+                <div class="social-media text-center">
+                    <h5 class="text-uppercase">Find out more</h5>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 	<!-- Jquery -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
