Style Footer section complete

--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
                 </div>    
                 <div class="social-media text-center">
                     <h5 class="text-uppercase">Find out more</h5>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="facebook"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
