--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<header class="page-header">
 		<div class="menu">
 			<!-- Start copied code: Bootstrap Navbar components code -->
-			<nav class="navbar navbar-expand-lg navbar-light">
+			<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 				<a class="navbar-brand" href="#">Amazing ISS</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
