--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
   </button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+						<li class="nav-item">
+							<a class="nav-link" href="#page-top">Home<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
+							<a class="nav-link" href="#about-section">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Location R-T</a>
+							<a class="nav-link" href="#RT-section">Location R-T</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Photos</a>
+							<a class="nav-link" href="#gallery-section">Gallery</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Spaces bases</a>
+							<a class="nav-link" href="#quotes-section">Astronauts</a>
 						</li>
 					</ul>
 				</div>
@@ -70,7 +70,7 @@
 
 
 		<!---------------------------- Start Top section------------------------------>
-		<section class="page-top">
+		<section class="page-top" id="page-top">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-12 page-title">
@@ -93,7 +93,7 @@
 		<!---------------------------- End Top section ------------------------------>
 
 		<!---------------------------- Start About section ------------------------------>
-		<section class="about-section">
+		<section class="about-section" id="about-section">
 			<div class="contanier-fluid">
 				<div class="row">
 					<div class="col-lg-6 col-md-12">
@@ -127,7 +127,7 @@
 		<!---------------------------- End About section ------------------------------>
 
 		<!---------------------------- Start ISS-Map section ------------------------------>
-		<section class="RT-section">
+		<section class="RT-section" id="RT-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 offset-lg-4 col-md-12">
@@ -147,7 +147,7 @@
 
 		<!---------------------------- Start Gallery section ------------------------------>
 
-		<section class="gallery-section">
+		<section class="gallery-section" id="gallery-section">
 			<div class="container">
 				<div class="gallery-title pb-5">
 					<h1 class="text-uppercase">ISS gallery</h1>
@@ -270,7 +270,7 @@
 		<!---------------------------- End Gallery section ------------------------------>
 
         <!---------------------------- Start Quotes section ------------------------------>
-        <section class="quotes-section">
+        <section class="quotes-section" id="quotes-section">
             <div class="container">
                 <div class="row text-center"><!---CONTAINS BOOTSTRAP CLASS-->
                     <div class="col-12">
