Fix padding on all sections

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-12 page-img">
-						<img src="SpaceStation/img/ISS-logo1.jpg" alt="ISS logo" class="img-fluid">
+					<div class="col-lg-6 col-md-12 banner-image">
+						<img src="SpaceStation/img/iss-logo2.png" alt="ISS logo" class="img-fluid">
                     </div>
 					</div>
 				</div>
@@ -344,7 +344,7 @@
         <div class="container">
             <div class="">
                 <div class="iss-logo text-center py-4">
-                    <a href="#" ><img src="#" alt="ISS logo"></a>
+                    <a href="#page-top" ><img src="SpaceStation/img/iss-logo2-small.png" alt="ISS logo"></a>
                 </div>    
                 <div class="social-media text-center">
                     <h5 class="text-uppercase">Find out more</h5>
