--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		<section class="gallery-section" id="gallery-section">
 			<div class="container">
 				<div class="gallery-title pb-5">
-					<h1 class="text-uppercase">ISS gallery</h1>
+					<h1 class="text-uppercase text-center">ISS gallery</h1>
 				</div>
 				<div class="row grid"> <!--ERROR: get images closer together if i have time-->
 					<div class="col-lg-4 col-md-6 col-sm-12 gallery-item">
@@ -282,17 +282,17 @@
         <!---------------------------- Start Quotes section ------------------------------>
         <section class="quotes-section" id="quotes-section">
             <div class="container">
-                <div class="row text-center"><!---CONTAINS BOOTSTRAP CLASS-->
+                <div class="row text-center quote-header"><!---CONTAINS BOOTSTRAP CLASS-->
                     <div class="col-12">
                         <div class="quotes-title">
-                            <h1 class="text-uppercase">Astronauts about the <span>ISS</span></h1>
+                            <h1 class="text-uppercase">Astronauts <span>ISS</span> thoughts</h1>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad autem esse facilis voluptatibus consequuntur magni, ipsa temporibus eos sapiente illo?</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="container carousel py-lg-5">
+            <div class="container carousel py-lg-3">
                 <div class="owl-carousel owl-theme">
                     <div class="astronaut row">
                         <div class="col-lg-4 col-md-12 astronaut-img">
