Fix addresses footer icons

--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
                 </div>    
                 <div class="social-media text-center">
                     <h5 class="text-uppercase">Find out more</h5>
-                    <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
-                    <a href="#" class="facebook"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/ISS/" class="facebook" target="_blank><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/iss/?hl=en" class="instagram" target="_blank><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/user/NASAtelevision" class="youtube" target="_blank><i class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/Space_Station?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="facebook" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
